--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "dependencies": {
     "protractor": "^7.0.0",
-    "jasmin": "^0.0.2"
+    "jasmine": "^0.0.2"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
